--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "start": "npm run build && nodemon src/server.ts",
     "start:prod": "node dist/server.js",
-    "build": "tsc",
+    "build": "tsc && npm run generate",
     "prebuild": "rimraf dist",
-    "debug": "npm run build && ts-node  src/server.ts"
+    "generate": "graphql-codegen"
   },
   "author": "Idan Peduiem",
   "license": "ISC",
   "keywords": [],
   "devDependencies": {
     "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/typescript": "^2.8.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
