--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/nodemon": "^1.19.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.29.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.3"
@@ -32,6 +33,7 @@
     "@graphql-tools/merge": "^8.2.14",
     "@graphql-tools/schema": "^8.3.14",
     "@graphql-tools/utils": "^8.6.13",
+    "bluetorch-logger": "^1.0.11",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
